--- a/Styles/registerStyles.css
+++ b/Styles/registerStyles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-background-image: url('../img/surf11.jpg');
+background-image: url('../img/surf2.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
@@ -19,7 +19,7 @@ align-content: center;
 
 
 .card{
-height: 380px;
+height: 500px;
 margin-top: auto;
 margin-bottom: auto;
 width: 600px;
@@ -79,15 +79,10 @@ margin-left: 15px;
 margin-right: 5px;
 
 }
-.login{
-    margin-top: .7rem;
-}
 .register{
     color: black;
     background-color: #FFC312;
-    margin-bottom: 1rem;
-    margin-top: 1.5rem;
-    margin-left: 3rem;
+
     width: 30%;
     outline: none;
 }
@@ -98,13 +93,9 @@ margin-right: 5px;
     text-decoration: none;
     color: black;
 }
-.forget-password{
-    color: white;
-}
-.forget-password:hover{
-    color: blue;
-}
+
 .login_btn{
+margin-top: 1rem;
 color: black;
 background-color: #FFC312;
 width: 100px;
@@ -124,68 +115,14 @@ margin-left: 4px;
 }
 
 .mensaje{
-   
-   color: aqua;
+   text-align: center;
+   border-radius: 25%;
+   width: 250px;
+   background-color: rgb(25, 152, 226);
+   color: black;
    transition: all 800ms ease;
+   font-size: 1rem;
 }
-
-/* MODAL */
-.modal-bg{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.is-visible{
-    opacity: 1;
-    visibility: visible;
-}
-.modal{
-    position: relative;
-    background-color: white;
-    width: 50%;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-    border-radius: 5%;
-    text-align: center;
-}
-.modal input{
-    text-decoration: none;
-}
-.modal button{
-    margin-top: 2rem;
-    padding: 10px 30px;
-    background-color: #00C9FF;
-    color: white;
-    border: none;
-    font-family: sans-serif;
-    cursor: pointer;
-    border-radius: 30%;
-}
-
-.close{
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-weight: bold;
-}
-.mensajeConfirm{
-    margin-top: 1rem;
-    font-size: 1.2rem;
-}
-.send:hover{
-    background-color: blue;
+.text{
+    color: yellow;
 }
