--- a/Styles/styleplayas.css
+++ b/Styles/styleplayas.css
@@ -24,15 +24,12 @@ background-size: cover;
  }
 
  header h1{
-    align-items: center;
-    text-align: center;
     font-size: 2rem;
     font-family: var(--fuente-principal);
     top: 40%;
-    left: 50px;
+    
     position: absolute;
-    color: #0ffff8;
-
+    color: rgba(0,0,0, 0.7);
 }
 .flex{
     display: flex;
@@ -96,6 +93,7 @@ right: 1rem;
 .slider__btn--right{
 left: 1rem;
 }
+        /* Cards */
 
 .contenedor{
     max-width: 100%;
@@ -109,8 +107,65 @@ img{
     width: 100%;
     height: 100%;
 }
+.btn-primary {
+   position: absolute;
+   top: .5rem;
+}
+.card-text {
+    font-family: var(--fuente-principal);
+}
+.card-img-top {
+    width: 100%;
+    height: 250px;
+    background-size: cover;
+    border-radius: 50%;
+}
+.card {
+    border-radius: 6%;
+    background-color: aliceblue;
+}
+@media (max-width: 900px) { 
+    .contenedor {
+        display: grid;
+        grid-template-columns: 1;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3rem;
+        max-width: 100%;
+        
+    } 
+    .card {
+        margin-bottom: 1rem;
+        border-radius: 5%;
+    }
+    .card-img-top {
+        width: 280px;
+        border-radius: 50%;
+        
+    }
 
+}
 /* MODALS */
+
+.modal {
+        position: relative;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        background-color: white;
+        width: 400px;
+        height: 650px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: sans-serif;
+        border-radius: 5%;
+        text-align: center;
+}
+
+
 .modal-bg-one{
     position: fixed;
     top: 0;
@@ -158,21 +213,7 @@ img{
     visibility: visible;
 }
 
-.modal{
-    position: relative;
-    margin-top: .5rem;
-    margin-left:  5rem;
-    background-color: white;
-    width: 35%;
-    height: 98%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-    border-radius: 5%;
-    text-align: center;
-}
+
 .modal button{
     margin-top: .5rem;
     padding: 10px 30px;
